# csci5551

./: .README.md.swp  README.md
colcon_ws/: README.md  mav.parm  mav.tlog  mav.tlog.raw  sv.sh
colcon_ws/src/drone_bringup/: CMakeLists.txt  README.md  package.xml
colcon_ws/src/drone_bringup/launch/: drone.launch.py  drone_desert.launch.py  drone_mountain.launch.py  mavros.launch.py
colcon_ws/src/drone_bringup/params/: sim_mavros_params.yaml
colcon_ws/src/drone_control/: CMakeLists.txt  README.md  package.xml
colcon_ws/src/drone_control/include/drone_control/: tinyfsm.hpp
colcon_ws/src/drone_control/src/: drone.cpp  drone.hpp
colcon_ws/src/drone_description/: CMakeLists.txt  README.md  package.xml
colcon_ws/src/drone_description/models/aruco_markers/marker0/: model.sdf
colcon_ws/src/drone_description/models/iris_with_ardupilot/: model.config
colcon_ws/src/drone_description/models/iris_with_depth_camera/: model.config  model.sdf
colcon_ws/src/drone_description/worlds/: iris_runway.sdf  rubicon_world.sdf  sand.world
colcon_ws/src/ekf_slam/: CMakeLists.txt  README.md  package.xml
colcon_ws/src/ekf_slam/ekf_slam/draft/: test_ekf.py
colcon_ws/src/ekf_slam/ekf_slam/src/: aruco_marker.py  cam_stab.py  camera_intrinsics.py  ekf_slam.py  ekf_slam_back_up.py  gps.csv  imu.csv  main.py  odom_sub.py  pose_est_imu.py  rgbd_cam_test.py  rgbd_sub.py  slam.csv
colcon_ws/src/ekf_slam/ekf_slam/test/: rgbd_cam_test.py  test_orb.py
colcon_ws/src/slam/: README.md  package.xml
docker/: Dockerfile  README.md  build.sh  p.sh  run.sh
(+35 files in other folders)
